@startuml

class Vehiculo {
  - color
  - ruedas
  + __init__(color, ruedas)
  + __str__()
}

class Coche {
  - velocidad
  - cilindrada
  + __init__(color, velocidad, cilindrada)
  + __str__()
}

class Formula1 {
  - equipo
  + __init__(color, velocidad, cilindrada, equipo)
  + __str__()
}

class Camioneta {
  - carga
  + __init__(color, velocidad, cilindrada, carga)
  + __str__()
}

class Bicicleta {
  - tipo
  + __init__(color, tipo)
  + __str__()
}

class Quad {
  - velocidad
  - cilindrada
  - tipo
  - modelo
  - carga
  + __init__(color, velocidad, cilindrada, tipo, modelo, carga)
  + __str__()
}

class Motocicleta {
  - velocidad
  - cilindra
  + __init__(color, tipo, velocidad, cilindra)
  + __str__()
}

Vehiculo <|-- Coche
Coche <|-- Formula1
Coche <|-- Camioneta
Vehiculo <|-- Bicicleta
Coche <|-- Quad
Bicicleta <|-- Motocicleta

@enduml


